package dataControllerUtils.protobuf;

import "./TimeInterval.proto";
import "./Filter.proto";

message ADETimebasedQuery {
    extensions 12 to 112;

    enum SORT_ORDER
    {
        ASC  = 0;
        DESC = 1;
    }
    required uint32       sessionId = 1;
    required uint32       domainId = 2;
    required string       objectName = 3;
    optional string       catalogName = 4;
    optional string       itemName = 5;
    optional string       providerFlow = 6;
    optional TimeInterval timeInterval = 7;
    optional string       sortFieldName = 8;
    optional SORT_ORDER   sortOrder = 9;
    optional uint32       getLastNumber = 10;
    repeated Filter       filters = 11;
}
